--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     OOP 🚀🐱‍🏍
 
+    <!-- <script src="./js/old-dogs/main.js" type="module"></script> -->
     <script src="./js/main.js" type="module"></script>
 </body>
 
